--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "20.5.1",
+    "@types/react": "18.2.20",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.28",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "typescript": "5.1.6"
   }
 }
