--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  }, 
+  "devDependencies": {
+    "@types/node": "20.5.1",
+    "@types/react": "18.2.20",
+    "typescript": "5.1.6"
   }
 }
