--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,15 @@
 PINATA_JWT=
 NEXT_PUBLIC_GATEWAY_URL=
 NEXT_PUBLIC_GATEWAY_TOKEN=
+
+POSTGRES_URL=
+POSTGRES_PRISMA_URL=
+POSTGRES_URL_NO_SSL=
+POSTGRES_URL_NON_POOLING=
+POSTGRES_USER=
+POSTGRES_HOST=
+POSTGRES_PASSWORD=
+POSTGRES_DATABASE=
+
+# Next-auth secret
+AUTH_SECRET=
