--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"next": "14.2.5",
+		"@heroicons/react": "^2.1.4",
+		"@tailwindcss/forms": "^0.5.7",
+		"@vercel/postgres": "^0.10.0",
+		"bcrypt": "^5.1.1",
+		"clsx": "^2.1.1",
+		"next": "^14.2.15",
+ 		"next-auth": "5.0.0-beta.19",
 		"pinata": "^0.1.10",
 		"react": "^18",
-		"react-dom": "^18"
+		"react-dom": "^18",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.2",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
